--- a/.github/workflows/schedule-fleet-sourcing-refresh.yaml
+++ b/.github/workflows/schedule-fleet-sourcing-refresh.yaml
@@ -1,19 +1,20 @@
-name: Schedule fleet sourcing refresh
+name: Trigger Fleet Sourcing Refresh
 
 on:
   schedule:
-    - cron:  '*/30 * * * *'
+    - cron: '*/30 * * * *'  # Runs every 30 minutes
 
 jobs:
-  makeWebRequest:
+  triggerRefresh:
     runs-on: ubuntu-latest
 
     steps:
-      - name: fleet sourcing refresh
+      - name: Send Refresh Request
         run: |
-          curl --location -f -X POST "https://fleet-sourcing-fam6csc7aa-wl.a.run.app/refresh" \
-               -H "Content-Type: application/json" \
-               -d '{
-                   "query": "?page=results&make=tesla&model=model+3&year=2021-2025&zipcode=94577&sort=endTime&order=asc"
-               }' || exit 1
-          echo "Request successful."
+          curl --location \
+               --header 'Content-Type: application/json' \
+               --data '{
+                   "query": "?page=results&make=tesla&model=model+3&year=2021-2025&zipcode=94577&trim=model+3+-+performance&sort=endTime&order=asc"
+               }' \
+               'https://fleet-sourcing-fam6csc7aa-wl.a.run.app/refresh' || exit 1
+          echo "Refresh request sent successfully."
