--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'data/fleet/Sourcing/**'
+      - "data/fleet/Sourcing/**"
 
 jobs:
   build-and-push:
@@ -52,7 +52,12 @@ jobs:
 
       # Deploy to Google Cloud Run
       - name: Deploy to Cloud Run
+        env:
+          ADESA_PASSWORD: ${{ secrets.ADESA_PASSWORD }}
+          GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
+          R2_SECRET_ACCESS_KEY: ${{ secrets.R2_SECRET_ACCESS_KEY }}
         run: |
+          # Deploy to Cloud Run with environment variables
           gcloud run deploy fleet-sourcing \
             --execution-environment=gen2 \
             --image docker.io/usernamex36/fleet-sourcing:latest \
@@ -61,6 +66,5 @@ jobs:
             --memory 2Gi \
             --cpu 1 \
             --allow-unauthenticated \
-            --execution-environment gen2 \
-            --cpu-boost
-          
+            --cpu-boost \
+            --set-env-vars=ADESA_PASSWORD=${ADESA_PASSWORD},GCP_SERVICE_ACCOUNT='${GCP_SERVICE_ACCOUNT}',R2_SECRET_ACCESS_KEY=${R2_SECRET_ACCESS_KEY}
