--- a/.github/workflows/build-deploy-web.yaml
+++ b/.github/workflows/build-deploy-web.yaml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
     paths:
-      - 'ui/web/**'
+      - "ui/web/**"
 
 jobs:
   deploy:
@@ -22,7 +22,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '21'
+          node-version: "21"
 
       - name: Install dependencies
         run: npm install
@@ -38,4 +38,3 @@ jobs:
 
       - name: Vercel Deploy
         run: npx vercel deploy --prebuilt --token ${{ secrets.VERCEL_TOKEN }} --prod
-
