--- a/.github/workflows/deploy-fleet-token-refresh.yaml
+++ b/.github/workflows/deploy-fleet-token-refresh.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'data/fleet/tokenRefresh/**'
+      - "data/fleet/tokenRefresh/**"
 
 jobs:
   deploy:
