--- a/.github/workflows/schedule-fleet-sourcing-refresh.yaml
+++ b/.github/workflows/schedule-fleet-sourcing-refresh.yaml
@@ -2,7 +2,7 @@ name: Trigger Fleet Sourcing Refresh
 
 on:
   schedule:
-    - cron: '*/30 * * * *'  # Runs every 30 minutes
+    - cron: "*/30 * * * *" # Runs every 30 minutes
 
 jobs:
   triggerRefresh:
