--- a/ui/web-extension/manifest.json
+++ b/ui/web-extension/manifest.json
@@ -1,15 +1,11 @@
 {
-    "manifest_version": 3,
-    "name": "web-extension",
-    "version": "0",
-    "content_scripts": [
-        {
-            "css": [
-                "sfMono.css"
-            ],
-            "matches": [
-                "*://*/*"
-            ]
-        }
-    ]
+  "manifest_version": 3,
+  "name": "web-extension",
+  "version": "0",
+  "content_scripts": [
+    {
+      "css": ["sfMono.css"],
+      "matches": ["*://*/*"]
+    }
+  ]
 }
