--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-    paths:
-      - "data/fleet/Sourcing/**"
+#    paths:
+#      - "data/fleet/Sourcing/**"
 
 jobs:
   build-and-push:
