--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -56,9 +56,9 @@ jobs:
           GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
           R2_SECRET_ACCESS_KEY: ${{ secrets.R2_SECRET_ACCESS_KEY }}
         run: |
-          echo "Type of ADESA_PASSWORD: ${ADESA_PASSWORD:+[hidden]}"
-          echo "Type of GCP_SERVICE_ACCOUNT: ${GCP_SERVICE_ACCOUNT:+[hidden]}"
-          echo "Type of R2_SECRET_ACCESS_KEY: ${R2_SECRET_ACCESS_KEY:+[hidden]}"
+          echo "Type of ADESA_PASSWORD: ${ADESA_PASSWORD}"
+          echo "Type of GCP_SERVICE_ACCOUNT: ${GCP_SERVICE_ACCOUNT}"
+          echo "Type of R2_SECRET_ACCESS_KEY: ${R2_SECRET_ACCESS_KEY}"
 
       # Deploy to Google Cloud Run
       - name: Deploy to Cloud Run
