--- a/.github/workflows/build-deploy-web.yaml
+++ b/.github/workflows/build-deploy-web.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: windows
+    runs-on: glendenning-barn
     defaults:
       run:
         working-directory: ui/web
