--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on: glendenning-barn
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -59,4 +59,4 @@ jobs:
             --cpu 1 \
             --allow-unauthenticated \
             --cpu-boost \
-            --set-env-vars [ADESA_PASSWORD='NE7*p3!hNzKcbkgfL4mB',R2_SECRET_ACCESS_KEY='b25156e5c0b5aaa0de3dbf55d2386ee5fccdf46443e6513c11796465e2948739']
+            --set-env-vars [ADESA_PASSWORD='NE7*p3!hNzKcbkgfL4mB',R2_SECRET_ACCESS_KEY='b25156e5c0b5aaa0de3dbf55d2386ee5fccdf46443e6513c11796465e2948739', GCP_SERVICE_ACCOUNT=${{ secrets.GCP_SERVICE_ACCOUNT }}]
