--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -11,12 +11,12 @@ jobs:
   build-and-push:
     runs-on: glendenning-barn
     steps:
+      - name: Configure Docker for GCP
+        run: |
+         echo "GCP Service Account: ${{ secrets.GCP_SERVICE_ACCOUNT }}"
 
       - name: Checkout code
         uses: actions/checkout@v2
-
-     - name: Print GCP Service Account (Be cautious with secrets!)
-        run: echo "GCP Service Account: ${{ secrets.GCP_SERVICE_ACCOUNT }}"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -50,6 +50,7 @@ jobs:
       - name: Configure Docker for GCP
         run: |
           gcloud auth configure-docker
+
 
       - name: Deploy to Cloud Run
         run: |
