--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -4,17 +4,11 @@ on:
   push:
     branches:
       - main
-#    paths:
-#      - "data/fleet/Sourcing/**"
 
 jobs:
   build-and-push:
     runs-on: glendenning-barn
     steps:
-      - name: Configure Docker for GCP
-        run: |
-         echo "GCP Service Account: ${{ secrets.GCP_SERVICE_ACCOUNT }}"
-
       - name: Checkout code
         uses: actions/checkout@v2
 
@@ -37,10 +31,14 @@ jobs:
           push: true
           tags: docker.io/usernamex36/fleet-sourcing:latest
 
+      - name: Decode GCP Service Account
+        run: |
+          echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" | base64 --decode > gcp_service_account.json
+
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2.0.0
         with:
-          credentials_json: ${{secrets.GCP_SERVICE_ACCOUNT}}
+          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT }}
 
       - name: Set up Google Cloud
         uses: google-github-actions/setup-gcloud@v2.0.1
@@ -51,10 +49,9 @@ jobs:
         run: |
           gcloud auth configure-docker
 
-
       - name: Deploy to Cloud Run
         run: |
-          # Deploy to Cloud Run with environment variables
+          # Deploy to Cloud Run with environment variables, including GCP service account
           gcloud run deploy fleet-sourcing \
             --execution-environment=gen2 \
             --image docker.io/usernamex36/fleet-sourcing:latest \
@@ -64,4 +61,4 @@ jobs:
             --cpu 1 \
             --allow-unauthenticated \
             --cpu-boost \
-            --set-env-vars [ADESA_PASSWORD='NE7*p3!hNzKcbkgfL4mB',R2_SECRET_ACCESS_KEY='b25156e5c0b5aaa0de3dbf55d2386ee5fccdf46443e6513c11796465e2948739']
+            --set-env-vars [ADESA_PASSWORD='NE7*p3!hNzKcbkgfL4mB',R2_SECRET_ACCESS_KEY='b25156e5c0b5aaa0de3dbf55d2386ee5fccdf46443e6513c11796465e2948739',GCP_SERVICE_ACCOUNT_JSON="$(cat gcp_service_account.json)"]
