--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -1,6 +1,5 @@
 name: Build and Deploy Fleet Sourcing
 
-
 on:
   push:
     branches:
@@ -39,7 +38,7 @@ jobs:
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2.0.0
         with:
-          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT }}
+          credentials_json: ${{ steps.decode-gcp.outputs.decoded-json }}
 
       - name: Set up Google Cloud
         uses: google-github-actions/setup-gcloud@v2.0.1
