--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -31,14 +31,11 @@ jobs:
           push: true
           tags: docker.io/usernamex36/fleet-sourcing:latest
 
-      - name: Decode GCP Service Account
-        run: |
-          echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" | base64 --decode > gcp_service_account.json
-
       - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2.0.0
-        with:
-          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT }}
+        run: |
+          echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" | base64 --decode > /tmp/gcp_service_account.json
+          gcloud auth activate-service-account --key-file=/tmp/gcp_service_account.json
+          rm /tmp/gcp_service_account.json
 
       - name: Set up Google Cloud
         uses: google-github-actions/setup-gcloud@v2.0.1
@@ -46,11 +43,11 @@ jobs:
           project_id: projectid-x
 
       - name: Configure Docker for GCP
-        run: |
-          gcloud auth configure-docker
+        run: gcloud auth configure-docker
 
       - name: Deploy to Cloud Run
         run: |
+          echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" | base64 --decode > /tmp/gcp_service_account.json
           gcloud run deploy fleet-sourcing \
             --execution-environment=gen2 \
             --image docker.io/usernamex36/fleet-sourcing:latest \
@@ -60,4 +57,5 @@ jobs:
             --cpu 1 \
             --allow-unauthenticated \
             --cpu-boost \
-            --set-env-vars ADESA_PASSWORD='NE7*p3!hNzKcbkgfL4mB',R2_SECRET_ACCESS_KEY='b25156e5c0b5aaa0de3dbf55d2386ee5fccdf46443e6513c11796465e2948739',GCP_SERVICE_ACCOUNT_JSON="$(cat gcp_service_account.json)"
+            --set-env-vars ADESA_PASSWORD='NE7*p3!hNzKcbkgfL4mB',R2_SECRET_ACCESS_KEY='b25156e5c0b5aaa0de3dbf55d2386ee5fccdf46443e6513c11796465e2948739',GCP_SERVICE_ACCOUNT_JSON="$(cat /tmp/gcp_service_account.json)"
+          rm /tmp/gcp_service_account.json
