--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -1,23 +1,19 @@
 name: Build and Deploy Fleet Sourcing
 
+run: |
+
 on:
   push:
     branches:
       - main
+#    paths:
+#      - "data/fleet/Sourcing/**"
 
 jobs:
   build-and-push:
     runs-on: glendenning-barn
     steps:
-      - name: Print Encoded GCP Service Account
-        run: |
-          echo "Encoded GCP Service Account: ${{ secrets.GCP_SERVICE_ACCOUNT }}"
-
-      - name: Print Decoded GCP Service Account (will be masked)
-        run: |
-          echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" | base64 --decode
-
-      - name: Checkout code
+- name: Checkout code
         uses: actions/checkout@v2
 
       - name: Set up Docker Buildx
@@ -39,11 +35,10 @@ jobs:
           push: true
           tags: docker.io/usernamex36/fleet-sourcing:latest
 
-      - name: Decode GCP Service Account for Authentication
-        run: |
-          echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" | base64 --decode > gcp_service_account.json
-          gcloud auth activate-service-account --key-file=gcp_service_account.json
-          rm gcp_service_account.json
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2.0.0
+        with:
+          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT }}
 
       - name: Set up Google Cloud
         uses: google-github-actions/setup-gcloud@v2.0.1
@@ -52,13 +47,11 @@ jobs:
 
       - name: Configure Docker for GCP
         run: |
-          echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" | base64 --decode > gcp_service_account.json
           gcloud auth configure-docker
-          rm gcp_service_account.json
 
       - name: Deploy to Cloud Run
         run: |
-          echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" | base64 --decode > gcp_service_account.json
+          # Deploy to Cloud Run with environment variables
           gcloud run deploy fleet-sourcing \
             --execution-environment=gen2 \
             --image docker.io/usernamex36/fleet-sourcing:latest \
@@ -68,5 +61,4 @@ jobs:
             --cpu 1 \
             --allow-unauthenticated \
             --cpu-boost \
-            --set-env-vars ADESA_PASSWORD='NE7*p3!hNzKcbkgfL4mB',R2_SECRET_ACCESS_KEY='b25156e5c0b5aaa0de3dbf55d2386ee5fccdf46443e6513c11796465e2948739'
-          rm gcp_service_account.json
+            --set-env-vars [ADESA_PASSWORD='NE7*p3!hNzKcbkgfL4mB',R2_SECRET_ACCESS_KEY='b25156e5c0b5aaa0de3dbf55d2386ee5fccdf46443e6513c11796465e2948739', GCP_SERVICE_ACCOUNT=${{ secrets.GCP_SERVICE_ACCOUNT }}]
