--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -1,19 +1,15 @@
 name: Build and Deploy Fleet Sourcing
 
-run: |
-
 on:
   push:
     branches:
       - main
-#    paths:
-#      - "data/fleet/Sourcing/**"
 
 jobs:
   build-and-push:
     runs-on: glendenning-barn
     steps:
-- name: Checkout code
+      - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Set up Docker Buildx
@@ -51,7 +47,6 @@ jobs:
 
       - name: Deploy to Cloud Run
         run: |
-          # Deploy to Cloud Run with environment variables
           gcloud run deploy fleet-sourcing \
             --execution-environment=gen2 \
             --image docker.io/usernamex36/fleet-sourcing:latest \
@@ -61,4 +56,4 @@ jobs:
             --cpu 1 \
             --allow-unauthenticated \
             --cpu-boost \
-            --set-env-vars [ADESA_PASSWORD='NE7*p3!hNzKcbkgfL4mB',R2_SECRET_ACCESS_KEY='b25156e5c0b5aaa0de3dbf55d2386ee5fccdf46443e6513c11796465e2948739', GCP_SERVICE_ACCOUNT=${{ secrets.GCP_SERVICE_ACCOUNT }}]
+            --set-env-vars ADESA_PASSWORD='NE7*p3!hNzKcbkgfL4mB',R2_SECRET_ACCESS_KEY='b25156e5c0b5aaa0de3dbf55d2386ee5fccdf46443e6513c11796465e2948739',GCP_SERVICE_ACCOUNT_JSON="$(echo ${{ secrets.GCP_SERVICE_ACCOUNT }} | base64 --decode)"
