--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -1,28 +1,30 @@
-name: Build and Deploy Fleet Sourcing
+name: build and deploy fleet sourcing
 
 on:
   push:
     branches:
       - main
+    paths:
+      - "data/fleet/Sourcing/**"
 
 jobs:
   build-and-push:
     runs-on: glendenning-barn
     steps:
-      - name: Checkout code
+      - name: checkout
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
+      - name: setup buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Login to Docker Hub
+      - name: login docker-hub
         uses: docker/login-action@v1
         with:
           registry: docker.io
           username: usernamex36
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push to Docker Hub
+      - name: build and push image
         uses: docker/build-push-action@v2
         with:
           context: ./data/fleet/Sourcing
@@ -31,21 +33,21 @@ jobs:
           push: true
           tags: docker.io/usernamex36/fleet-sourcing:latest
 
-      - name: Authenticate to Google Cloud
+      - name: gcloud auth
         uses: google-github-actions/auth@v2.0.0
         with:
           credentials_json: '$( ${{ secrets.BASE64_GCP_SERVICE_ACCOUNT }} | base64 --decode)'
 
-      - name: Set up Google Cloud
+      - name: setup gcloud
         uses: google-github-actions/setup-gcloud@v2.0.1
         with:
           project_id: projectid-x
 
-      - name: Configure Docker for GCP
+      - name: gclpud configure docker
         run: |
           gcloud auth configure-docker
 
-      - name: Deploy to Cloud Run
+      - name: deploy
         run: |
           gcloud run deploy fleet-sourcing \
             --execution-environment=gen2 \
