--- a/.github/workflows/deploy-fleet-command.yaml
+++ b/.github/workflows/deploy-fleet-command.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-    paths:
-      - "data/fleet/command/**"
+#    paths:
+#      - "data/fleet/command/**"
 
 jobs:
   deploy:
