--- a/.github/workflows/deploy-fleet-command.yaml
+++ b/.github/workflows/deploy-fleet-command.yaml
@@ -4,12 +4,12 @@ on:
   push:
     branches:
       - main
-    paths:
-      - "data/fleet/command/**"
+#    paths:
+#      - "data/fleet/command/**"
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: glendenning-barn
     steps:
       - uses: actions/checkout@main
 
