--- a/.github/workflows/deploy-fleet-DriveStateRefresh.yaml
+++ b/.github/workflows/deploy-fleet-DriveStateRefresh.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-#    paths:
-#      - "data/fleet/DriveStateRefresh/**"
+    paths:
+      - "data/fleet/DriveStateRefresh/**"
 
 jobs:
   deploy:
