--- a/.github/workflows/z-deploy-build-web-s-24327-Kome-Rd-Mi-Wuk-Village,-CA-95346.yaml
+++ b/.github/workflows/z-deploy-build-web-s-24327-Kome-Rd-Mi-Wuk-Village,-CA-95346.yaml
@@ -3,20 +3,20 @@ on:
   push:
     branches:
       - main
-    paths:
-      - "ui/web-s/**"
+
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: glendenning-barn
     env:
       NEXT_PUBLIC_SUBLICENSE: 24327 Kome Rd Mi-Wuk Village, CA 95346
     defaults:
       run:
-        working-directory: web-s-24327-kome-rd-mi-wuk-village-ca-95346
+        working-directory:  web-s-24327-kome-rd-mi-wuk-village-ca-95346
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
 
       - name: Rename directory
         run: mv ui/web-s web-s-24327-kome-rd-mi-wuk-village-ca-95346
@@ -25,17 +25,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "21"
+          node-version: '21'
 
       - name: Install dependencies
         run: npm install
 
       - name: Vercel Project Settings
         run: vercel pull --yes --scope teamname-x --environment=production --token ${{ secrets.VERCEL_TOKEN }}
-        env:
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-          NEXT_PUBLIC_SUBLICENSE: 24327 Kome Rd Mi-Wuk Village, CA 95346
 
       - name: Vercel Build
         run: npx vercel build --prod --token ${{ secrets.VERCEL_TOKEN }}
