--- a/.github/workflows/z-deploy-build-web-s-61-Castro-St-San-Leandro,-CA-94577.yaml
+++ b/.github/workflows/z-deploy-build-web-s-61-Castro-St-San-Leandro,-CA-94577.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: glendenning-barn
+    runs-on: ubuntu-latest
     env:
       NEXT_PUBLIC_SUBLICENSE: 61 Castro St San Leandro, CA 94577
     defaults:
