--- a/.github/workflows/z-deploy-build-web-s-10144-Boca-Entrada-Blvd-APT-116-Boca-Raton,-FL-33428.yaml
+++ b/.github/workflows/z-deploy-build-web-s-10144-Boca-Entrada-Blvd-APT-116-Boca-Raton,-FL-33428.yaml
@@ -4,10 +4,9 @@ on:
     branches:
       - main
 
-
 jobs:
   deploy:
-    runs-on: glendenning-barn
+    runs-on: ubuntu-latest
     env:
       NEXT_PUBLIC_SUBLICENSE: 10144 Boca Entrada Blvd APT 116 Boca Raton, FL 33428
     defaults:
