--- a/.github/workflows/z-deploy-build-web-s-2300-9th-Ave-SW-UNIT-A5-Olympia,-WA-98502.yaml
+++ b/.github/workflows/z-deploy-build-web-s-2300-9th-Ave-SW-UNIT-A5-Olympia,-WA-98502.yaml
@@ -4,10 +4,9 @@ on:
     branches:
       - main
 
-
 jobs:
   deploy:
-    runs-on: glendenning-barn
+    runs-on: ubuntu-latest
     env:
       NEXT_PUBLIC_SUBLICENSE: 2300 9th Ave SW UNIT A5 Olympia, WA 98502
     defaults:
