--- a/.github/workflows/z-deploy-build-web-s-2307-90th-Ave-Oakland,-CA-94603.yaml
+++ b/.github/workflows/z-deploy-build-web-s-2307-90th-Ave-Oakland,-CA-94603.yaml
@@ -4,10 +4,9 @@ on:
     branches:
       - main
 
-
 jobs:
   deploy:
-    runs-on: glendenning-barn
+    runs-on: ubuntu-latest
     env:
       NEXT_PUBLIC_SUBLICENSE: 2307 90th Ave Oakland, CA 94603
     defaults:
