--- a/.github/workflows/z-deploy-build-web-s-24327-Kome-Rd-Mi-Wuk-Village,-CA-95346.yaml
+++ b/.github/workflows/z-deploy-build-web-s-24327-Kome-Rd-Mi-Wuk-Village,-CA-95346.yaml
@@ -4,10 +4,9 @@ on:
     branches:
       - main
 
-
 jobs:
   deploy:
-    runs-on: glendenning-barn
+    runs-on: ubuntu-latest
     env:
       NEXT_PUBLIC_SUBLICENSE: 24327 Kome Rd Mi-Wuk Village, CA 95346
     defaults:
