--- a/.github/workflows/z-deploy-build-web-s-36-Castro-St-San-Leandro,-CA-94577.yaml
+++ b/.github/workflows/z-deploy-build-web-s-36-Castro-St-San-Leandro,-CA-94577.yaml
@@ -4,10 +4,9 @@ on:
     branches:
       - main
 
-
 jobs:
   deploy:
-    runs-on: glendenning-barn
+    runs-on: ubuntu-latest
     env:
       NEXT_PUBLIC_SUBLICENSE: 36 Castro St San Leandro, CA 94577
     defaults:
