--- a/.github/workflows/schedule-fleet-token-refresh.yaml
+++ b/.github/workflows/schedule-fleet-token-refresh.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   makeWebRequest:
-    runs-on: glendenning-barn
+    runs-on: ubuntu-latest
 
     steps:
       - name: fleet token refresh
