--- a/.github/workflows/z-deploy-build-web-s-2300-9th-ave-sw-unit-a5-olympia,-wa-98502.yaml
+++ b/.github/workflows/z-deploy-build-web-s-2300-9th-ave-sw-unit-a5-olympia,-wa-98502.yaml
@@ -1,4 +1,4 @@
-name: z web-s 61 Castro St San Leandro, CA 94577
+name: z web-s 2300 9th Ave SW UNIT A5 Olympia, WA 98502
 on:
   push:
     branches:
@@ -10,17 +10,17 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      NEXT_PUBLIC_SUBLICENSE: 61 Castro St San Leandro, CA 94577
+      NEXT_PUBLIC_SUBLICENSE: 2300 9th Ave SW UNIT A5 Olympia, WA 98502
     defaults:
       run:
-        working-directory:  web-s-61-castro-st-san-leandro-ca-94577
+        working-directory:  web-s-2300-9th-ave-sw-unit-a5-olympia-wa-98502
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
 
       - name: Rename directory
-        run: mv ui/web-s web-s-61-castro-st-san-leandro-ca-94577
+        run: mv ui/web-s web-s-2300-9th-ave-sw-unit-a5-olympia-wa-98502
         working-directory: ${{ github.workspace }}
 
       - name: Set up Node.js
