--- a/.github/workflows/z-deploy-build-web-s-38-Castro-St-San-Leandro,-CA-94577-2.yaml
+++ b/.github/workflows/z-deploy-build-web-s-38-Castro-St-San-Leandro,-CA-94577-2.yaml
@@ -1,12 +1,14 @@
-name: Z build deploy 38 Castro St San Leandro, CA 94577 2
+name: z web-s 38 Castro St San Leandro, CA 94577 2
 on:
   push:
     branches:
       - main
+    paths:
+      - "ui/web-s/**"
 
 jobs:
   deploy:
-    runs-on: 4
+    runs-on: ubuntu-latest
     env:
       NEXT_PUBLIC_SUBLICENSE: 38 Castro St San Leandro, CA 94577 2
     defaults:
