--- a/.github/workflows/z-deploy-build-web-s-539-Blossom-Way-San-Leandro,-CA-94577.yaml
+++ b/.github/workflows/z-deploy-build-web-s-539-Blossom-Way-San-Leandro,-CA-94577.yaml
@@ -1,12 +1,14 @@
-name: Z build deploy 539 Blossom Way San Leandro, CA 94577
+name: z web-s 539 Blossom Way San Leandro, CA 94577
 on:
   push:
     branches:
       - main
+    paths:
+      - "ui/web-s/**"
 
 jobs:
   deploy:
-    runs-on: 10
+    runs-on: ubuntu-latest
     env:
       NEXT_PUBLIC_SUBLICENSE: 539 Blossom Way San Leandro, CA 94577
     defaults:
