--- a/.github/workflows/z-deploy-build-web-s-61-Castro-St-San-Leandro,-CA-94577-3.yaml
+++ b/.github/workflows/z-deploy-build-web-s-61-Castro-St-San-Leandro,-CA-94577-3.yaml
@@ -1,12 +1,14 @@
-name: Z build deploy 61 Castro St San Leandro, CA 94577 3
+name: z web-s 61 Castro St San Leandro, CA 94577 3
 on:
   push:
     branches:
       - main
+    paths:
+      - "ui/web-s/**"
 
 jobs:
   deploy:
-    runs-on: 7
+    runs-on: ubuntu-latest
     env:
       NEXT_PUBLIC_SUBLICENSE: 61 Castro St San Leandro, CA 94577 3
     defaults:
