--- a/.github/workflows/z-deploy-build-web-s-945-estabrook-st-san-leandro,-ca-94577.yaml
+++ b/.github/workflows/z-deploy-build-web-s-945-estabrook-st-san-leandro,-ca-94577.yaml
@@ -1,4 +1,4 @@
-name: z web-s 61 Castro St San Leandro, CA 94577
+name: z web-s 945 Estabrook St San Leandro, CA 94577
 on:
   push:
     branches:
@@ -10,17 +10,17 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      NEXT_PUBLIC_SUBLICENSE: 61 Castro St San Leandro, CA 94577
+      NEXT_PUBLIC_SUBLICENSE: 945 Estabrook St San Leandro, CA 94577
     defaults:
       run:
-        working-directory:  web-s-61-castro-st-san-leandro-ca-94577
+        working-directory:  web-s-945-estabrook-st-san-leandro-ca-94577
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
 
       - name: Rename directory
-        run: mv ui/web-s web-s-61-castro-st-san-leandro-ca-94577
+        run: mv ui/web-s web-s-945-estabrook-st-san-leandro-ca-94577
         working-directory: ${{ github.workspace }}
 
       - name: Set up Node.js
