--- a/.github/workflows/fleet-token-refresh.yaml
+++ b/.github/workflows/fleet-token-refresh.yaml
@@ -1,11 +1,11 @@
-name: Deploy fleet DriveStateRefresh
+name: fleet token refresh
 
 on:
   push:
     branches:
       - main
     paths:
-      - "data/fleet/DriveStateRefresh/**"
+      - "data/fleet/tokenRefresh/**"
 
 jobs:
   deploy:
@@ -17,10 +17,10 @@ jobs:
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.WORKERS_API_TOKEN }}
-          workingDirectory: data/fleet/DriveStateRefresh
+          workingDirectory: data/fleet/tokenRefresh
           secrets: |
             UPSTASH_REDIS_REST_TOKEN
-            GOOGLE_MAPS_API_KEY
+            TESLA_CLIENT_SECRET
         env:
           UPSTASH_REDIS_REST_TOKEN: ${{ secrets.UPSTASH_REDIS_REST_TOKEN }}
-          GOOGLE_MAPS_API_KEY: ${{ secrets.GOOGLE_MAPS_API_KEY }}
+          TESLA_CLIENT_SECRET: ${{ secrets.TESLA_CLIENT_SECRET }}
