--- a/.github/workflows/ui-web-s-945-estabrook-st-san-leandro,-ca-94577.yaml
+++ b/.github/workflows/ui-web-s-945-estabrook-st-san-leandro,-ca-94577.yaml
@@ -1,4 +1,4 @@
-name: z web-s 945 Estabrook St San Leandro, CA 94577
+name: ui-web-s 945 Estabrook St San Leandro, CA 94577
 on:
   push:
     branches:
