--- a/.github/workflows/ui-web-s-18572-cull-canyon-rd-castro-valley,-ca-94552.yaml
+++ b/.github/workflows/ui-web-s-18572-cull-canyon-rd-castro-valley,-ca-94552.yaml
@@ -1,4 +1,4 @@
-name: z web-s 1939 E 14th St San Leandro, CA 94577
+name: ui-web-s 18572 Cull Canyon Rd Castro Valley, CA 94552
 on:
   push:
     branches:
@@ -10,17 +10,17 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      NEXT_PUBLIC_SUBLICENSE: 1939 E 14th St San Leandro, CA 94577
+      NEXT_PUBLIC_SUBLICENSE: 18572 Cull Canyon Rd Castro Valley, CA 94552
     defaults:
       run:
-        working-directory:  web-s-1939-e-14th-st-san-leandro-ca-94577
+        working-directory:  web-s-18572-cull-canyon-rd-castro-valley-ca-94552
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
 
       - name: Rename directory
-        run: mv ui/web-s web-s-1939-e-14th-st-san-leandro-ca-94577
+        run: mv ui/web-s web-s-18572-cull-canyon-rd-castro-valley-ca-94552
         working-directory: ${{ github.workspace }}
 
       - name: Set up Node.js
