--- a/.github/workflows/ui-web-s-2307-90th-ave-oakland,-ca-94603.yaml
+++ b/.github/workflows/ui-web-s-2307-90th-ave-oakland,-ca-94603.yaml
@@ -1,4 +1,4 @@
-name: z web-s 921 Colusa Ave Oroville, CA 95965
+name: ui-web-s 2307 90th Ave Oakland, CA 94603
 on:
   push:
     branches:
@@ -10,17 +10,17 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      NEXT_PUBLIC_SUBLICENSE: 921 Colusa Ave Oroville, CA 95965
+      NEXT_PUBLIC_SUBLICENSE: 2307 90th Ave Oakland, CA 94603
     defaults:
       run:
-        working-directory:  web-s-921-colusa-ave-oroville-ca-95965
+        working-directory:  web-s-2307-90th-ave-oakland-ca-94603
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
 
       - name: Rename directory
-        run: mv ui/web-s web-s-921-colusa-ave-oroville-ca-95965
+        run: mv ui/web-s web-s-2307-90th-ave-oakland-ca-94603
         working-directory: ${{ github.workspace }}
 
       - name: Set up Node.js
