--- a/.github/workflows/ui-web-s-800-marina-blvd-san-leandro,-ca-94577.yaml
+++ b/.github/workflows/ui-web-s-800-marina-blvd-san-leandro,-ca-94577.yaml
@@ -1,4 +1,4 @@
-name: z web-s 1915 E 14th St San Leandro, CA 94577
+name: ui-web-s 800 Marina Blvd San Leandro, CA 94577
 on:
   push:
     branches:
@@ -10,17 +10,17 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      NEXT_PUBLIC_SUBLICENSE: 1915 E 14th St San Leandro, CA 94577
+      NEXT_PUBLIC_SUBLICENSE: 800 Marina Blvd San Leandro, CA 94577
     defaults:
       run:
-        working-directory:  web-s-1915-e-14th-st-san-leandro-ca-94577
+        working-directory:  web-s-800-marina-blvd-san-leandro-ca-94577
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
 
       - name: Rename directory
-        run: mv ui/web-s web-s-1915-e-14th-st-san-leandro-ca-94577
+        run: mv ui/web-s web-s-800-marina-blvd-san-leandro-ca-94577
         working-directory: ${{ github.workspace }}
 
       - name: Set up Node.js
