--- a/.github/workflows/ui-web-s-817-rodney-dr-san-leandro,-ca-94577-2.yaml
+++ b/.github/workflows/ui-web-s-817-rodney-dr-san-leandro,-ca-94577-2.yaml
@@ -1,4 +1,4 @@
-name: z web-s 3617 Hemlock Ave Ceres, CA 95307
+name: ui-web-s 817 Rodney Dr San Leandro, CA 94577 2
 on:
   push:
     branches:
@@ -10,17 +10,17 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      NEXT_PUBLIC_SUBLICENSE: 3617 Hemlock Ave Ceres, CA 95307
+      NEXT_PUBLIC_SUBLICENSE: 817 Rodney Dr San Leandro, CA 94577 2
     defaults:
       run:
-        working-directory:  web-s-3617-hemlock-ave-ceres-ca-95307
+        working-directory:  web-s-817-rodney-dr-san-leandro-ca-94577-2
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
 
       - name: Rename directory
-        run: mv ui/web-s web-s-3617-hemlock-ave-ceres-ca-95307
+        run: mv ui/web-s web-s-817-rodney-dr-san-leandro-ca-94577-2
         working-directory: ${{ github.workspace }}
 
       - name: Set up Node.js
