--- a/.github/workflows/ui-web-s-921-colusa-ave-oroville,-ca-95965.yaml
+++ b/.github/workflows/ui-web-s-921-colusa-ave-oroville,-ca-95965.yaml
@@ -1,4 +1,4 @@
-name: z web-s 2309 90th Ave Oakland, CA 94603
+name: ui-web-s 921 Colusa Ave Oroville, CA 95965
 on:
   push:
     branches:
@@ -10,17 +10,17 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      NEXT_PUBLIC_SUBLICENSE: 2309 90th Ave Oakland, CA 94603
+      NEXT_PUBLIC_SUBLICENSE: 921 Colusa Ave Oroville, CA 95965
     defaults:
       run:
-        working-directory:  web-s-2309-90th-ave-oakland-ca-94603
+        working-directory:  web-s-921-colusa-ave-oroville-ca-95965
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
 
       - name: Rename directory
-        run: mv ui/web-s web-s-2309-90th-ave-oakland-ca-94603
+        run: mv ui/web-s web-s-921-colusa-ave-oroville-ca-95965
         working-directory: ${{ github.workspace }}
 
       - name: Set up Node.js
