--- a/.github/workflows/ui-web.yaml
+++ b/.github/workflows/ui-web.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build-deploy:
-    runs-on: glendenning-barn
+    runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ui/web
