--- a/.github/workflows/utility-collection-http-trigger.yaml
+++ b/.github/workflows/utility-collection-http-trigger.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-#    paths:
-#      - "data/fleet/Sourcing/**"
+    paths:
+      - "data/utility/collectionHttpTrigger/**"
 
 jobs:
   build-and-push:
